<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52ad56">

    <TextView
        android:id="@+id/labelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/cardio"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/heartImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/heartImg"
        android:layout_width="350dp"
        android:layout_height="183dp"
        android:contentDescription="@string/weight_image"
        android:scaleType="centerInside"
        android:src="@drawable/heartimg2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#30000000"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartImg"
        app:layout_constraintVertical_bias="0.413">

        <TextView
            android:id="@+id/instrLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mark_it_complete"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/c_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:width="250dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/completed_set_type_1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/c_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:width="250dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/completed_set_type_1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/c_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:width="250dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/completed_set_type_1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/c_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:width="250dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/completed_set_type_1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/c_checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:width="250dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/completed_set_type_1"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>